resources/docs/2.0/events/repetitive-events.md
# Repetitive Events

In Eventmie Pro, you can create daily, weekly & monthly repetitive events and classes. Like- daily repetitive Yoga classes, weekly repetitive webinars, and much more.

---

![Repetitive event view](https://eventmie-pro-docs.classiebit.com/images/v2/RepetitiveEventImages/events-repetitive-event-view.png "Repetitive event view")

---

> {primary} We'll discuss unique steps in creating a Repetitive event, the rest of all is the same as a Simple Event.

---

-   [Create Repetitive Event](#create-repetitive-event)
-   [Timing](#timing)
-   [Repetitive Schedules](#repetitive-schedules)
-   [Repetitive Type: Daily](#repetitive-type-daily)
-   [Repetitive Type: Weekly](#repetitive-type-weekly)
-   [Repetitive Type: Monthly](#repetitive-type-monthly)
-   [Skip Schedule <small class="v">v1.7</small>](#skip-schedule)
-   [Seasonal Tickets <small class="v">v2.0</small>](#seasonal-tickets)
-   [Timeslots Availability](#timeslots-availability)

<a name="create-repetitive-event"></a>

## Create Repetitive Event

Repetitive event here refers to the events or classes having repetitive schedules. Click on <larecipe-button type="primary" size="sm" rounded>Create Event</larecipe-button> to get started. 😤

<a name="Timing"></a>

## Timing

To start creating repetitive schedules, first set a time range, within which, the repetitive event is going to be held.

<br>

**Form Fields**

-   Start date
-   Start time
-   End date
-   End time
-   Add Repetitive Schedules

---

> {success} Click and check the `Add Repetitive Schedules` checkbox to get started with repetitive schedules.

---

<a name="Repetitive-Schedule"></a>

## Repetitive Schedule <small class="v">v1.7</small>

Once you check the `Add Repetitive Schedules` checkbox, a new interface shows up.

1. It'll auto-generate Schedules rows according to the `Total Months` between `Start & End date`.
2. You can modify each Schedule separately.
3. The customer has to purchase a ticket for every `day`.

---

> {primary} If you don't like customers to pay for every day, we've got a solution for that too. We'll discuss it in the `Monthly/Weekly Payment` section.

---

<br>

**Let's start with Repetitive Type**

<a name="repetitive-type-daily"></a>

## Repetitive Type: Daily

The event that repeats every `day` from start to end date.

<br>

**Form Fields**

-   **Repetitive Dates (Repeat Except)**- set dates on which the event `DO NOT` repeats.
-   **Start Time** - set start time for a particular schedule of each month.
-   **End Time** - set end time for a particular schedule of each month.

---

> {success} You can set different `start & end time` for every month's schedule.

---

> {primary} It also shows you calculations of each schedule days and time in real time.

---

**This is how Daily Repetitive Schedules look like**

---

![Daily Repetitive Schedules](https://eventmie-pro-docs.classiebit.com/images/v2/RepetitiveEventImages/events-repetitive-daily.png "Daily Repetitive Schedules")

---

**And this is how they look like on the Event page**

---

![Daily Repetitive Schedules View](https://eventmie-pro-docs.classiebit.com/images/v2/RepetitiveEventImages/events-repetitive-daily-view.png "Daily Repetitive Schedules View")

---

<a name="repetitive-type-weekly"></a>

## Repetitive Type: Weekly

The event that repeats every `week` from start to end date.

<br>

**Form Fields**

-   **Repetitive Days** - set weekdays on which the event repeats.
-   **Start Time** - set start time for a particular schedule of each month.
-   **End Time** - set end time for a particular schedule of each month.

---

**This is how Weekly Repetitive Schedules look like**

---

![Weekly Repetitive Schedules](https://eventmie-pro-docs.classiebit.com/images/v2/RepetitiveEventImages/Repetative-Event-Weekly-Basis.png "Weekly Repetitive Schedules")

---

**And this is how they look like on the Event page**

---

![Weekly Repetitive Schedules View](https://eventmie-pro-docs.classiebit.com/images/v2/RepetitiveEventImages/RepetitiveEventWeeklyPreview.png "Weekly Repetitive Schedules View")

---

<a name="repetitive-type-monthly"></a>

## Repetitive Type: Monthly

The event that repeats every `month` from start to end date.

<br>

**Form Fields**

-   **Repetitive Dates (Repeat Every)** - set dates on which the event repeats.
-   **Start Time** - set start time for a particular schedule of each month.
-   **End Time** - set end time for a particular schedule of each month.

---

**This is how Monthly Repetitive Schedules look like**

---

![Monthly Repetitive Schedules](https://eventmie-pro-docs.classiebit.com/images/v2/RepetitiveEventImages/Monthly-Repetitive-Schedule-Image.png "Monthly Repetitive Schedules")

---

**And this is how they look like on the Event page**

---

![Monthly Repetitive Schedules View](https://eventmie-pro-docs.classiebit.com/images/v2/RepetitiveEventImages/Monthly-Repetitive-Schedule-Preview.png "Monthly Repetitive Schedules View")

---

<a name="skip-schedule"></a>

## Skip Schedule <small class="v">v1.7</small>

To skip a month from Schedules, leave the particular **Schedule** input blank.

---

![Skip Repetitive Schedules](https://eventmie-pro-docs.classiebit.com/images/v2/RepetitiveEventImages/SkipScheduleImage.png "Skip Repetitive Schedules")

---

**And this is how they look like on the Event page**

---

![Skip Repetitive Schedules View](https://eventmie-pro-docs.classiebit.com/images/v2/RepetitiveEventImages/SkipSchedulePreviewImage.png "Skip Repetitive Schedules View")

---

<a name="seasonal-tickets"></a>

## Seasonal Tickets

---

> {primary} New in v2.0 🔥

---

In the case of repetitive schedules, sometimes you want to get paid on a `Monthly` or `Weekly` basis for all schedules within a `Month or Week`, instead of each day separately.

Seasonal Tickets means, customer purchase the whole month tickets at once and they can attend event with single ticket.

<br>

This means the customer can attend the event for the whole month or week, by paying a **Full Advance Payment** for a complete month or week schedule.

<br>

For this kind of scenario, here's the `Seasonal Ticket Feature` to the rescue. 🥰

<br>

Let's get started. Check the `Seasonal Ticket` checkbox, e.g for the `Repetitive Type: Monthly` type of event. After that-

1. Set the ticket prices for whole month schedules, instead of a single schedule.
2. When a customer makes the payment, you get a whole month's payment instead of a single schedule.

---

**This is how Monthly Repetitive Schedules with Seasonal Ticket option checked, look like**

---

![Monthly Repetitive Schedules Monthly Payment](https://eventmie-pro-docs.classiebit.com/images/v2/RepetitiveEventImages/Monthly-Repetitive-Schedule-Image.png "Monthly Repetitive Schedules  Monthly Payment")

---

**And this is how they look like on the Event page**

---

![Monthly Repetitive Schedules  Monthly Payment View](https://eventmie-pro-docs.classiebit.com/images/v2/RepetitiveEventImages/Monthly-Repetitive-Schedule-Preview.png "Monthly Repetitive Schedules  Monthly Payment View")

---

<a name="timeslots-availability"></a>

## Timeslots Availability

Check available timeslots for repetitive event schedules on the go. You can now see if a timeslot is fully booked or not for any specific date before clicking on the Checkout button.

1. In the Event Schedules, if all the tickets have been booked for a specific timeslot/date, then it'll show that timeslot as **Out Of Stock**.

---

![Live Timeslots Availability Check](https://eventmie-pro-docs.classiebit.com/images/v2/RepetitiveEventImages/repetitive-events-availability.png "Live Timeslots Availability Check")

---

2. On the Checkout Popup, it'll show **Vacant Seats** for every ticket, only if the **Total Available Ticket Quantity** of the ticket is less than **Max Ticket Qty Limit Per Order** (Admin Panel -> Settings -> Booking Tab -> Max Ticket Qty Limit Per Order).

In this way, it won't disclose all the Quantity of the ticket and only show the vacant seats in case of lesser availability.

---

![Live Timeslots Availability Vacant Seats Per Ticket](https://eventmie-pro-docs.classiebit.com/images/v2/RepetitiveEventImages/repetitive-events-vacant.png "Live Timeslots Availability Vacant Seats Per Ticket")

---
